--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ngrx/effects": "^11.0.1",
+    "@ngrx/router-store": "^11.0.1",
     "@ngrx/store": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
