--- a/projects/udtc-page/package.json
+++ b/projects/udtc-page/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^11.1.2",
-    "@angular/core": "^11.1.2"
+    "@angular/core": "^11.1.2",
+    "@angular/material": "^11.2.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
